--- a/app.yaml
+++ b/app.yaml
@@ -3,9 +3,10 @@
 # https://developers.google.com/appengine/docs/python/config/appconfig
 # for details.
 
-# TODO: Enter your application id below. If you have signed up
+# DONE: Enter your application id below. If you have signed up
 # using cloud.google.com/console use the "project id" for your application
 # id.
+application: cdeploy-demo
 runtime: python27
 api_version: 1
 threadsafe: yes
