--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ env:
 - PATH=$PATH:$HOME/gcloud/google-cloud-sdk/bin PYTHONPATH=${HOME}/gcloud/google-cloud-sdk/platform/google_appengine
 before_install:
 # Decrypt the credentials we added to the repo using the key we added with the Travis command line tool
-- openssl aes-256-cbc -K $encrypted_40ce2f227d45_key -iv $encrypted_40ce2f227d45_iv
-  -in credentials.tar.gz.enc -out credentials.tar.gz -d
+- openssl aes-256-cbc -K $encrypted_ba596d2ff515_key -iv $encrypted_ba596d2ff515_iv -in credentials.tar.gz.enc -out credentials.tar.gz -d
 # If the SDK is not already cached, download it and unpack it
 - if [ ! -d $HOME/gcloud/google-cloud-sdk ]; then mkdir -p $HOME/gcloud && wget https://dl.google.com/dl/cloudsdk/release/google-cloud-sdk.tar.gz
   --directory-prefix=$HOME/gcloud && cd $HOME/gcloud && tar xzf google-cloud-sdk.tar.gz
@@ -23,7 +22,7 @@ before_install:
 - gcloud auth activate-service-account --key-file cont-deployment.json
 install:
 # Set the correct project to deploy to
-- gcloud config set project continuous-deployment-python
+- gcloud config set project cdeploy-demo
 # Install the AppEngine SDk
 - gcloud -q components update gae-python
 - pip install -r requirements.txt -t lib/
